(trying to fix mobile responsiveness of the app on mobile view :tools::spanner_and_wrench:)

--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,50 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.square {
+  width: 100px;
+  height: 100px;
+  background-color: #1a1a1a;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 7px;
+  font-size: 40px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.square:hover {
+  transform: scale(1.1);
+  border-color: #535bf2;
+}
+
+.board-row {
+  display: flex;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
+
+@keyframes fadeOut {
+  0%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+  }
+}
